--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.15.2",
+    "config": "^1.24.0",
     "eslint-config-airbnb-base": "^11.0.0",
     "express": "^4.14.0",
     "express-winston": "^2.1.0",
