--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^2.2.3",
     "eslint-plugin-react": "^6.8.0",
+    "gulp-env": "^0.4.0",
     "gulp-eslint": "^3.0.1",
     "mocha": "^3.2.0",
     "mockgoose": "^6.0.8",
