--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "devDependencies": {
     "babel-eslint": "^7.1.1",
     "chai": "^3.5.0",
+    "chai-as-promised": "^6.0.0",
     "chai-http": "^3.0.0",
     "eslint": "^3.12.0",
     "eslint-config-airbnb": "^13.0.0",
