--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "eslint-plugin-react": "^6.8.0",
     "gulp-env": "^0.4.0",
     "gulp-eslint": "^3.0.1",
+    "gulp-istanbul": "^1.1.1",
+    "gulp-mocha": "^3.0.1",
     "mocha": "^3.2.0",
     "mockgoose": "^6.0.8",
     "sinon": "^1.17.6"
