--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "gulp-eslint": "^3.0.1",
     "gulp-istanbul": "^1.1.1",
     "gulp-mocha": "^3.0.1",
+    "gulp-sequence": "^0.4.6",
     "gulp-util": "^3.0.7",
     "mocha": "^3.2.0",
     "mockgoose": "^6.0.8",
