--- a/.travis.yml
+++ b/.travis.yml
@@ -5,3 +5,6 @@ install:
   - npm install
 script:
   - node ./node_modules/gulp/bin/gulp.js test:development
+cache:
+  directories:
+  - node_modules
