--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "gulp-util": "^3.0.7",
     "mocha": "^3.2.0",
     "mockgoose": "^6.0.8",
+    "node-mocks-http": "^1.5.5",
     "sinon": "^1.17.6"
   }
 }
