Added docker services, and dockerized nongped-api then push to the docker hub.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,8 @@
+sudo: required
 language: node_js
+services:
+  - docker
+
 node_js:
   - "4"
 install:
@@ -8,3 +12,7 @@ script:
 cache:
   directories:
   - node_modules
+after_success:
+  - docker login -u worasit501 -p bfmzevdn
+  - docker build -t worasit501/nongped-api .
+  - docker push worasit501/nongped-api
