--- a/.gitignore
+++ b/.gitignore
@@ -85,3 +85,9 @@ jspm_packages
 .idea/
 node_modules/
 
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
+/.elasticbeanstalk/
