Revised gitignore, and added "npm start" command to starting a server in EC2 instance.

--- a/.gitignore
+++ b/.gitignore
@@ -87,7 +87,4 @@ node_modules/
 
 
 # Elastic Beanstalk Files
-.elasticbeanstalk/*
-!.elasticbeanstalk/*.cfg.yml
-!.elasticbeanstalk/*.global.yml
-/.elasticbeanstalk/
+/.elasticbeanstalk/config.yml
